# cloudy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  STYLEGUIDE.md  mkdocs.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  documentation.yaml  enhancement.yaml  story.yaml
cv_basics/: package.xml  setup.cfg  setup.py
cv_basics/cv_basics/: webcam_pub.py
cv_basics/launch/: thermal_camera_launch.py
docs/: DetailedSoftwareDiagram.drawio  README.md  READMEE.md  SLAM_and_navigation.md  _coverpage.md  _sidebar.md  index.html
docs/BOM/: README.md
docs/Electrical&ElectronicalDesign/: README.md
docs/Electrical&ElectronicalDesign/Cabling&Mounting/: README.md
docs/Electrical&ElectronicalDesign/Development&Production/: README.md
docs/Electrical&ElectronicalDesign/ElectronicalRequirements/: README.md
docs/Electrical&ElectronicalDesign/overview/: README.md
docs/Electrical&ElectronicalDesign/softwareSetup/: README.md
docs/Examples&Tutorials/: README.md
docs/GettingStarted/: README.md
docs/HardwareSetup/: README.md
docs/HardwareSetup/electronicSetup/: README.md
docs/HardwareSetup/electronics/: README.md
docs/Home/: README.md
docs/Home/mechanical/: README.md
docs/MechanicalDesign/: README.md
docs/MechanicalDesign/3DPrinting/: README.md
docs/MechanicalDesign/AssemblyGuide/: README.md
docs/MechanicalDesign/Design&Production/: README.md
docs/MechanicalDesign/MechanicalPartList/: README.md
docs/MechanicalDesign/MechanicalRequirements/: README.md
docs/Requriments/: README.md
docs/SoftwareDesign/: README.md
docs/agv/: README.md  getting-started.md
docs/electronics/: README.md
docs/gettingStarted/: README.md
docs/images/: cncpng
docs/mini-agv/: README.md  getting-started.md
docs/simulation/: README.md
docs/softwareSetup/: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
mecanum_control/: setup.cfg  setup.py
mecanum_control/mecanum_control/: mecanum_control.py  serial_com.py
rf2o_laser_odometry/src/: CLaserOdometry2D.cpp
robolaunch_cloudy_bringup/: CMakeLists.txt  package.xml
robolaunch_cloudy_bringup/config/: diffbot_diff_drive_controller.yaml
robolaunch_cloudy_bringup/launch/: diffbot_system.launch.py
robolaunch_cloudy_description/: CMakeLists.txt  package.xml
robolaunch_cloudy_description/config/: diffbot.rviz
robolaunch_cloudy_description/launch/: arcelik_description.launch.py  description.launch.py
robolaunch_cloudy_description/ros2_control/: diffbot_system.ros2_control.xacro
robolaunch_cloudy_description/sensors/: depth_sensor.urdf.xacro  depth_sensor_arcelik.xacro  depth_sensor_cloudy_v1.xacro  depth_sensor_cloudy_v3.xacro  generic_laser_cloudy_v1.xacro  generic_laser_cloudy_v2.xacro  laser.urdf.xacro  laser_arcelik.xacro
robolaunch_cloudy_description/urdf/: cloudy_v1.urdf.xacro  cloudy_v1_core.xacro  cloudy_v2.urdf.xacro  cloudy_v2_core.xacro  diffbot.urdf.xacro  diffbot_system.urdf.xacro  gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
robolaunch_cloudy_hardware/: package.xml
robolaunch_cloudy_hardware/arduino_level/: oled_screen.ino
robolaunch_cloudy_hardware/firmware/: esp32_ibus_pwm_it_works  firmware_sensors.ino
robolaunch_cloudy_hardware/src/: diffbot_system.cpp
robolaunch_cloudy_navigation/: CMakeLists.txt  package.xml
robolaunch_cloudy_navigation/config/: arcelik_ekf.yaml  box_filter.yaml  ekf.yaml  frames.gv  map_filter.yaml  nav_straight_line.yaml  navigation.yaml  range_filter.yaml  sim_ekf.yaml  sim_navigation.yaml  sim_slam.yaml  slam.yaml
robolaunch_cloudy_navigation/distributed_launch/: cloud.launch.py
robolaunch_cloudy_navigation/launch/: arcelik.launch.py  arcelik_nav.launch.py  arcelik_slam.launch.py  cartographer.launch.py  cloudy_nav.launch.py  cloudy_slam.launch.py  launch_all.launch.py  map_filter.launch.py
robolaunch_cloudy_navigation/map/: demo1.data  demo1.pgm  demo1.yaml  demo3.data  demo3.pgm  demo3.yaml  demo4.data  demo4.pgm  demo4.yaml  dust.data  dust.pgm  dust.yaml  dust2.data  dust2.pgm  dust2.yaml  nav_demo.data  nav_demo.pgm  nav_demo.yaml  navigation.data  navigation.pgm  navigation.yaml  office.pgm  office.yaml  ofice.data  ofice.yaml  ofis.data  ofis.pgm  ofis.yaml  ostim.data  ostim.pgm  ostim.yaml  play_ground.yaml  warehouse.data  warehouse.pgm  warehouse.yaml  warehouse_filtered.pgm  warehouse_filtered.yaml
robolaunch_cloudy_navigation/robolaunch_cloudy_navigation/scripts/: barcode_reader.py  dummy.py  odom_tf_publisher.py  way_points.py  way_points_web.py
robolaunch_cloudy_navigation/sim_launch/: sim_launch_all.launch.py  sim_nav.launch.py  sim_slam.launch.py
robolaunch_cloudy_navigation/src/: laser_scan_publisher.cpp  main.cpp
robolaunch_cloudy_simulator/: CMakeLists.txt  README.md  package.xml
robolaunch_cloudy_simulator/launch/: gazebo.launch.py  launch_sim.launch.py  rsp.launch.py  spawn.launch.py
robolaunch_cloudy_simulator/rviz/: view_bot.rviz
robolaunch_cloudy_simulator/worlds/: industrial-warehouse.sdf
robolaunch_diffbot_bringup/: CMakeLists.txt  package.xml
robolaunch_diffbot_bringup/config/: diffbot_diff_drive_controller.yaml
robolaunch_diffbot_bringup/launch/: diffbot_system.launch.py
robolaunch_diffbot_description/: CMakeLists.txt  package.xml
robolaunch_diffbot_description/ros2_control/: diffbot_system.ros2_control.xacro
robolaunch_diffbot_description/sensors/: generic_laser.urdf.xacro  laser.urdf.xacro
robolaunch_diffbot_description/urdf/: diffbot_system.urdf.xacro  properties.urdf.xacro  robot_core.xacro
robolaunch_diffbot_description/urdf/meshes/: body.stl
robolaunch_diffbot_hardware/: CMakeLists.txt  package.xml  robolaunch_diffbot_hardware.xml
robolaunch_diffbot_hardware/firmware/: firmware.ino  firmware_flysky.ino
robolaunch_diffbot_hardware/include/robolaunch_cloudy_hardware/: diffbot_system.hpp  visibility_control.h
robolaunch_diffbot_hardware/include/robolaunch_diffbot_hardware/: diffbot_system.hpp  visibility_control.h
robolaunch_diffbot_hardware/src/: diffbot_system.cpp
(+390 files in other folders)
