<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robolaunch_cloudy_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mmmertgungor@gmail.com">mert</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <depend>slam_toolbox</depend>
  <depend>laser_filters</depend>
  <depend>rplidar_ros</depend>
  <depend>nav2_bringup</depend>
  <depend>rf2o_laser_odometry</depend>
  <depend>robot_localization</depend>
  <depend>nav2_util</depend>



  <export>
    <build_type>ament_cmake</build_type>
    <exec_depend>nav2_bringup</exec_depend>

  </export>
</package>
