<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robolaunch_cloudy_hardware</name>
  <version>0.0.0</version>
  <description>Robolaunch diffbot hardware interface.</description>

  <maintainer email="mertsaadetcs@gmail.com">Mert Saadet</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>diff_drive_controller</depend>
  
  <build_depend>pluginlib</build_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
